test/scc/expr/semantic-errors/130.t
void test()
{
    int a[10] = { [10] = 0 };
}